--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="container">
+		<%= render partial: "shared/header"%>
 
-<%= yield %>
-
+		<%= render partial: "shared/menu"%>
+		<div class="row">
+			<div class="span12">
+				<%= yield %>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
