--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="row">
+	<div class="span12">
+		<h2>
+			Here you will find all of your favorite animals
+		</h2>
+		<p>
+			Bine ati venit in lumea animalelor, aici o sa gasiti toate felurile de animale posibile. Etc ETc Etc
+		</p>
+	</div>
+</div>
