--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -14,7 +14,7 @@
   <tr>
     <td><%= animal.name %></td>
     <td><%= animal.description %></td>
-    <td><%= animal.species %></td>
+    <td><%= animal.species.name %></td>
     <td><%= link_to 'Show', animal %></td>
     <td><%= link_to 'Edit', edit_animal_path(animal) %></td>
     <td><%= link_to 'Destroy', animal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
