Change static pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h2>
+	About us
+</h2>
+<hr>
+<p>
+	Meet the Zoo Crew, find out how to get a job at Australia Zoo, check out the Zoo Media Centre 
+	and find out the latest Irwin family and Australia Zoo news! You can even go back to where it 
+	all began and learn about the Zoo's exciting 40 year history. Have a go at all of the awards 
+	Australia Zoo has snagged!
+</p>
