--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,8 @@
-<div class="row">
-	<div class="span12">
-		<h2>
-			Here you will find all of your favorite animals
-		</h2>
-		<p>
-			Bine ati venit in lumea animalelor, aici o sa gasiti toate felurile de animale posibile. Etc ETc Etc
-		</p>
-	</div>
-</div>
+<h2>
+	Here you will find all of your favorite animals
+</h2>
+<hr>
+<p>
+	Australia Zoo is a team of passionate conservationists working around-the-clock to deliver an animal experience like no other.
+	Cuddle a koala, hand-feed our Asian Elephants, walk with a Sumatran Tiger and watch a crocodile launch from the waters edge. Australia Zoo is the ultimate wildlife adventure delivering conservation through exciting education.
+</p>
