--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>
+	Contact
+</h1>
+<hr>
+<form action="pages/contact" method="post" class="text-center">
+	<label>Name</label>
+	<input type="text" name="name_contact">
+	<label>Email</label>
+	<input type="text" name="email_contact">
+	<label>Subject</label>
+	<input type="text" name="subject_contact">
+	<label>Content</label>
+	<textarea name="content_contact" cols="3" rows="5"></textarea>
+	<br>
+	<input type="submit" class="btn">
+
+</form>
