--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -16,12 +16,15 @@
     <td><%= animal.description %></td>
     <td><%= animal.species.name %></td>
     <td><%= link_to 'Show', animal %></td>
+    <% if @user == "admin" %>
     <td><%= link_to 'Edit', edit_animal_path(animal) %></td>
     <td><%= link_to 'Destroy', animal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end%>
   </tr>
 <% end %>
 </table>
 
 <br />
-
+<% if @user == "admin"%>
 <%= link_to 'New Animal', new_animal_path %>
+<%end%>
