--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -15,6 +15,7 @@
   <%= @animal.species.name %>
 </p>
 
-
-<%= link_to 'Edit', edit_animal_path(@animal) %> |
+<% if @user == "admin"%>
+<%= link_to 'Edit', edit_animal_path(@animal)%> |
+<%end%> 
 <%= link_to 'Back', animals_path %>
