Add style for web

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="span12">
-		<h1 class="text-center">
+		<h1 class="text-center" id="web-title">
 			Animals From Zoo
 		</h1>
 	</div>
