--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,18 +1,20 @@
-<nav class="navbar">
-	<div class="navbar-inner">
-		<ul class="nav">
-			<li id="home-menu-btn">
-				<%= link_to "Home", home_path %>
-			</li>
-			<li id="about-menu-btn">
-				<%= link_to "About", about_path %>
-			</li>
-			<li id="contact-menu-btn">
-				<%= link_to "Contact", contact_path %>
-			</li>
-			<li id="animals-menu-btn">
-				<%= link_to "Animals", "../animals" %>
-			</li>	
-		</ul>
-	</div>
-</nav>
+<div class="row">
+	<nav class="navbar">
+		<div class="navbar-inner">
+			<ul class="nav">
+				<li id="home-menu-btn">
+					<%= link_to "Home", home_path %>
+				</li>
+				<li id="about-menu-btn">
+					<%= link_to "About", about_path %>
+					</li>
+				<li id="contact-menu-btn">
+					<%= link_to "Contact", contact_path %>
+				</li>
+				<li id="animals-menu-btn">
+					<%= link_to "Animals", "../animals" %>
+				</li>	
+			</ul>
+		</div>
+	</nav>
+</div>
