--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,16 @@
+body{
+	background-image: url("background.jpg");
+}
+div.content-page{
+	background-color: #ddfdc2;
+	box-shadow:0px 0px 15px black;
+}
+nav.navbar{
+	box-shadow: 0px 0px 15px black;
+}
 nav.navbar div.navbar-inner{
 	border-radius: 0px;
-	border:1px solid #eee;
+	border:none;
 	box-shadow:none;
 	background: #9dd53a; /* Old browsers */
 	background: -moz-linear-gradient(top,  #9dd53a 0%, #a1d54f 50%, #80c217 51%, #7cbc0a 100%); /* FF3.6+ */
@@ -38,6 +48,9 @@ nav.navbar div.navbar-inner ul.nav li a:visited
 	color: white;
 	text-shadow:none;
 }
-
+h1#web-title{
+	color: white;
+	text-shadow: 1px 1px 2px black;
+}
 
 
