--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,3 +1,4 @@
+<% if @user == "admin"%>
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -15,7 +16,28 @@
   <%= @animal.species.name %>
 </p>
 
-<% if @user == "admin"%>
+
 <%= link_to 'Edit', edit_animal_path(@animal)%> |
-<%end%> 
+
 <%= link_to 'Back', animals_path %>
+<%else%>
+<div class="show-content">
+	<p id="notice"><%= notice %></p>
+
+	<h2 >
+	  <%= @animal.name %>
+	</h2>
+	<p>
+	  <b>Species:</b>
+	  <%= @animal.species.name %>
+	</p>
+	<hr>
+	<p>
+	  <b>Description:</b>
+	  <%= @animal.description %>
+	</p>
+</div>
+
+<%= link_to 'Back', animals_path %>
+<%end%> 
+
