--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 		<%= render partial: "shared/header"%>
 
 		<%= render partial: "shared/menu"%>
-		<div class="row">
+		<div class="row content-page">
 			<div class="span12">
 				<%= yield %>
 			</div>
