--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%if session[:login] == "y" && session[:type] == 0%>
 <h2>
 	Here you will find all of your favorite animals
 </h2>
@@ -6,3 +7,4 @@
 	Australia Zoo is a team of passionate conservationists working around-the-clock to deliver an animal experience like no other.
 	Cuddle a koala, hand-feed our Asian Elephants, walk with a Sumatran Tiger and watch a crocodile launch from the waters edge. Australia Zoo is the ultimate wildlife adventure delivering conservation through exciting education.
 </p>
+<%end%>
