--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,4 @@
+<%if session[:login] == "y" && session[:type] == 0%>
 <h1>
 	Contact
 </h1>
@@ -15,3 +16,4 @@
 	<input type="submit" class="btn">
 
 </form>
+<%end%>
